--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,20 @@
 /* @tailwind base; */
 @tailwind components;
 @tailwind utilities;
+
+
+html {
+  background-color: black;
+  font-family: 'Lato', sans-serif;
+  color: slategray;
+  font-size: 1rem;
+}
+
+p {
+  margin: 0;
+}
+
+h1,
+h3 {
+  margin: 0;
+}
